[build] install lib and headers using GNU path

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -147,7 +147,13 @@ else()
 endif()
 target_link_libraries(${PROJECT_NAME} ${LUA_LIBRARIES} ${LUABIND_EXTRA_LIBS})
 
-install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} PERMISSIONS OWNER_READ OWNER_WRITE 
-    GROUP_READ 
-    WORLD_READ )
+include(GNUInstallDirs)
 
+install(TARGETS ${PROJECT_NAME}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
+
+install(DIRECTORY ../luabind
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+  FILES_MATCHING PATTERN *.hpp
+)
